[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/hole.png" type="Texture" id=1]
[ext_resource path="res://Hole.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.3487

[node name="Hole" type="Area2D" groups=[
"holes",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Mob = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
